<?php die(); ?>
Akeeba Panopticon 1.0.1
================================================================================
! Security update: TinyMCE 6.7.1
~ Update Gravatar URLs with SHA-256
+ Cancel pending Joomla! update (gh-162)
+ Joomla! version support status (gh-163)
+ Link to the data source for the PHP version information
+ Debug information for the initial connection
+ Note when updates are running on each site
# [HIGH] Constant core update rescheduling / emails
# [HIGH] Cannot connect to Joomla! 3 sites which don't have SEF URLs with URL rewriting enabled
# [HIGH] Manually scheduled Joomla! updates are cancelled when evaluating automatic updates
# [HIGH] PHP error when there are backup records without a backup start time
# [MEDIUM] Joomla! Update options falsely claim that the time to install updates is in GMT; it's local
# [MEDIUM] Log view: timezone calculation was wrong
# [MEDIUM] Log view: no site names shown
# [MEDIUM] Wrong indication of stuck core and site update tasks in the overview page
# [LOW] Log view: undefined property warning, leads to the site list being empty
# [LOW] Possible PHP issue with ForkedLogger
# [LOW] Filters on the Task page partially overlapped (cosmetic issue)
# [LOW] Leftover phpinfo.php file in the public root
# [LOW] Guzzle may return NULL response when trying to connect a site
# [LOW] PHP 8 deprecated notices sending emails

Akeeba Panopticon 1.0.0
================================================================================
+ Initial release